update omise key implement

--- a/app/views/Dashboard/header.html
+++ b/app/views/Dashboard/header.html
@@ -69,7 +69,7 @@
                     <div class="panel-body">
                         <ul class="nav navbar-nav">
                                 <li><a href="#">Default Bank Account</a></li>
-                                <li><a href="#">Public Key & Secret Key</a></li>
+                                <li><a href="/Publickey">Public Key & Secret Key</a></li>
                         </ul>
                     </div>
                 </div>
