--- a/app/views/Dashboard/DefaultBank.html
+++ b/app/views/Dashboard/DefaultBank.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
            <div class="p-3 mb-2 bg-danger text-white">{{.flash.error}}</div>
-           <form id="login-form" action="/UpdateKey" method="post" role="form" style="display: block;">
+           <form id="login-form" action="/UpdateDefaultBank" method="post" role="form" style="display: block;">
            <div class="form-group">
                 <div class="radio">
                         <label class="radio-inline"><input type="radio" name="optradio">Corporation</label>
