new thread for recipientSaveInOmise()

--- a/app/views/Dashboard/header.html
+++ b/app/views/Dashboard/header.html
@@ -68,6 +68,7 @@
                 <div id="dropdown-lvl1" class="panel-collapse collapse">
                     <div class="panel-body">
                         <ul class="nav navbar-nav">
+                                <li><a href="/ListAllRecipient">All Bank Account</a></li>
                                 <li><a href="/DefaultBank">Default Bank Account</a></li>
                                 <li><a href="/Publickey">Public Key & Secret Key</a></li>
                         </ul>
