--- a/app/views/Dashboard/DefaultBank.html
+++ b/app/views/Dashboard/DefaultBank.html
@@ -4,6 +4,7 @@
         <div class="side-body">
            <h1> Default Bank </h1>
            <div class="p-3 mb-2 bg-danger text-white">{{.flash.error}}</div>
+           <div class="p-3 mb-2 bg-success text-white">{{.flash.success}}</div>
            <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Recipient Infomations</label>
                 <div class="col-sm-10">
