--- a/app/views/Dashboard/DefaultBank.html
+++ b/app/views/Dashboard/DefaultBank.html
@@ -11,7 +11,7 @@
                   <p class="form-control-static"></p>
                 </div>
             </div>
-           <form id="login-form" action="/UpdateDefaultBank" method="post" role="form" style="display: block;">
+           <form id="login-form" action="/{{.actionURL}}" method="post" role="form" style="display: block;">
            <div class="form-group">
                 <div class="radio">
                         <label class="radio-inline"><input type="radio" name="optradio" id="optradio1" value="corporation">Corporation</label>
