--- a/app/views/Dashboard/ListAllRecipient.html
+++ b/app/views/Dashboard/ListAllRecipient.html
@@ -22,6 +22,7 @@
         <td>{{$element.Type}}</td>
         <td>
                 <div class="btn-group">
+                        <button type="button" class="btn btn-default">Make Default</button>
                         <button type="button" class="btn btn-info">List Transfer</button>
                         <button type="button" class="btn btn-success">Update</button>
                         <button type="button" class="btn btn-danger">Delete</button>
