--- a/app/views/Dashboard/ListAllRecipient.html
+++ b/app/views/Dashboard/ListAllRecipient.html
@@ -16,13 +16,18 @@
         </thead>
         <tbody>
 {{range $index, $element := .sliceRecipient}}
+
 <tr>
         <td>{{$element.Name}}</td>
         <td>{{$element.Email}}</td>
         <td>{{$element.Type}}</td>
         <td>
                 <div class="btn-group">
+                        {{if $element.IsDefault}}
+                        <button type="button" class="btn btn-primary">Make Default</button>
+                        {{else}}
                         <button type="button" class="btn btn-default">Make Default</button>
+                        {{end}}
                         <button type="button" class="btn btn-info">List Transfer</button>
                         <button type="button" class="btn btn-success">Update</button>
                         <button type="button" class="btn btn-danger">Delete</button>
