--- a/app/views/Dashboard/header.html
+++ b/app/views/Dashboard/header.html
@@ -1,4 +1,4 @@
-{{set . "title" "Home"}}
+{{set . "title" "Dashboard"}}
 {{append . "moreScripts" "js/dashboard.js"}}
 {{append . "moreStyles" "css/dashboard.css"}}
 {{template "header.html" .}}
