--- a/app/views/Settings/DefaultBank.html
+++ b/app/views/Settings/DefaultBank.html
@@ -97,7 +97,7 @@
                     <label for="usr">Number:</label>
                     <input type="text" class="form-control" id="bankaccountnumber" name="bankaccountnumber" value="{{.recipient.BankAccountNumber}}">
             </div>
-            <input type="submit" class="btn btn-info" value="Save Button">
+            <input type="submit" class="btn btn-info" name="reciepient-submit" value="Save Button">
             </form>
         </div>
     </div>
